Glitch when hiding Nurb vertices #76126

Closed
opened 2020-04-26 16:14:41 +02:00 by Diogo Valadares Reis dos Santos · 5 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GT 710/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-20 16:50, hash: be7c51d076
Worked: I think I didn't have this problem until blender 2.81

Short description of error
When you hide vertices of a curve with NURBS, those sometimes will still appear flickering around the scene

image.png image.png image.png

Exact steps for others to reproduce the error

  • create a Nurbs curve object
  • enter edit mode and duplicate the vertices multiple times
  • hide all vertices and leave only some.
  • when you move the ones that are still visible you will see some vertices flickering aroundx

or

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GT 710/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.83 (sub 13), branch: master, commit date: 2020-04-20 16:50, hash: `be7c51d076` Worked: I think I didn't have this problem until blender 2.81 **Short description of error** When you hide vertices of a curve with NURBS, those sometimes will still appear flickering around the scene |![image.png](https://archive.blender.org/developer/F8496140/image.png)|![image.png](https://archive.blender.org/developer/F8496142/image.png)|![image.png](https://archive.blender.org/developer/F8496145/image.png) | -- | -- | -- | **Exact steps for others to reproduce the error** - create a Nurbs curve object - enter edit mode and duplicate the vertices multiple times - hide all vertices and leave only some. - when you move the ones that are still visible you will see some vertices flickering aroundx or - Open attached file - With the curve selected enter edit mode. - Try to select a vertex and move [nurbs_verts_hidden_bug.blend](https://archive.blender.org/developer/F8499102/nurbs_verts_hidden_bug.blend)

Added subscriber: @Diogo_Valadares

Added subscriber: @Diogo_Valadares
Germano Cavalcante changed title from Curve vertices get visually messed up when hidden to Glitch when hiding Nurb vertices 2020-04-28 15:01:19 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Clément Foucault self-assigned this 2020-05-13 20:05:25 +02:00

This issue was referenced by c233271b0b

This issue was referenced by c233271b0b1f63c730903e580dc1877dfb1d3402

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76126
No description provided.