Fix T76126 Overlay: Glitch when hiding Nurb vertices